Update to Gradle 8.10
 - Convert to Kotlin